--- a/galerija.css
+++ b/galerija.css
@@ -1,10 +1,12 @@
-body {
-    background-color:#e6e6e6;
-    margin: 0;
-  }
+
   * {
     box-sizing: border-box;
   }
+  body {
+    background-color:#e6e6e6;
+    margin: 0;
+  }
+
   .topnav {
   background-color: #333;
   overflow: hidden;
@@ -16,7 +18,7 @@ body {
   display: block;
   color: #f2f2f2;
   text-align: center;
-  padding: 14px 16px;
+  padding: 10px 14px;
   text-decoration: none;
   font-size: 17px;
   }
@@ -58,7 +60,12 @@ body {
       text-align: left;
     }
   }
-  
+  .w3-circle {
+    height: 14px;
+    width: auto;
+    
+
+  }  
   
   img {
     margin-bottom: -4px;
